# basebox

./: LICENSE  README.md  mypy.ini  pyproject.toml
basebox/: __init__.py  base_box.py  base_box_dict.py  base_box_list.py  exceptions.py  field.py  typing_helper.py
tests/: test.py
