[tool.poetry]
name = "basebox"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Takeaki Oura <ihalt10@icloud.com>", "BaseBox contributors"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
lxml = "^4.9.2"
pyright = "^1.1.309"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length= 100
force_single_line = true
